# SJC

./: .gitignore  .windsurfrules  CLAUDE.md  Gold.py  README.md  prd.md  pyproject.toml  requirements.txt  tests.md
app/: app.py  gold_data.py  rate_limiter.py  spread_analysis.py  visualization.py
tests/: test_gold_data.py  test_rate_limiter.py  test_spread_analysis.py  test_visualization.py
